crates/badness-parser/tests/snapshots/parser__delim_math_pairs_across_a_blank_line_inside_a_group.snap
---
source: tests/parser.rs
expression: "tree(\"\\\\(\\n\\\\text{a\\n\\nb}\\n\\\\)\")"
---
ROOT@0..17
  PARAGRAPH@0..17
    INLINE_MATH@0..17
      CONTROL_SYMBOL@0..2 "\\("
      MATH@2..15
        NEWLINE@2..3 "\n"
        COMMAND@3..14
          CONTROL_WORD@3..8 "\\text"
          GROUP@8..14
            L_BRACE@8..9 "{"
            WORD@9..10 "a"
            NEWLINE@10..11 "\n"
            NEWLINE@11..12 "\n"
            WORD@12..13 "b"
            R_BRACE@13..14 "}"
        NEWLINE@14..15 "\n"
      CONTROL_SYMBOL@15..17 "\\)"
