crates/badness-parser/tests/snapshots/parser__gathered_math_environment.snap
---
source: crates/badness-parser/tests/parser.rs
expression: "tree(\"\\\\begin{gathered}\\n  x + y \\\\\\\\\\n  {a % comment\\n    + b}\\n\\\\end{gathered}\")"
---
ROOT@0..66
  ENVIRONMENT@0..66
    BEGIN@0..16
      CONTROL_WORD@0..6 "\\begin"
      NAME_GROUP@6..16
        L_BRACE@6..7 "{"
        WORD@7..15 "gathered"
        R_BRACE@15..16 "}"
    MATH@16..52
      NEWLINE@16..17 "\n"
      WHITESPACE@17..19 "  "
      WORD@19..20 "x"
      WHITESPACE@20..21 " "
      WORD@21..22 "+"
      WHITESPACE@22..23 " "
      WORD@23..24 "y"
      WHITESPACE@24..25 " "
      LINE_BREAK@25..27
        CONTROL_SYMBOL@25..27 "\\\\"
      NEWLINE@27..28 "\n"
      WHITESPACE@28..30 "  "
      GROUP@30..51
        L_BRACE@30..31 "{"
        WORD@31..32 "a"
        WHITESPACE@32..33 " "
        COMMENT@33..42 "% comment"
        NEWLINE@42..43 "\n"
        WHITESPACE@43..47 "    "
        WORD@47..48 "+"
        WHITESPACE@48..49 " "
        WORD@49..50 "b"
        R_BRACE@50..51 "}"
      NEWLINE@51..52 "\n"
    END@52..66
      CONTROL_WORD@52..56 "\\end"
      NAME_GROUP@56..66
        L_BRACE@56..57 "{"
        WORD@57..65 "gathered"
        R_BRACE@65..66 "}"
